[package]
name = "headmaster"
version = "0.1.0"
authors = ["Mike Lubinets <public@mersinvald.me>"]
edition = "2018"

[[bin]]
name = "headmaster-bin"
path = "src/main.rs"

[lib]
name = "headmaster"
path = "src/lib.rs"

[dependencies]
priestess = { path = "../priestess" }
chrono = { version = "0.4.6", features = [ "serde" ] }
dotenv = "0.13.0"
failure = "0.1.4"
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
env_logger = "0.6.0"
log = "0.4.6"
toml = "0.4.10"
tiny_http = "0.6.1"
structopt = "0.2.14"
