[package]
name = "headmaster"
version = "0.1.0"
authors = ["Mike Lubinets <public@mersinvald.me>"]
edition = "2018"

[[bin]]
name = "headmaster-bin"
path = "src/main.rs"

[lib]
name = "headmaster"
path = "src/lib.rs"

[dependencies]
priestess = { path = "../priestess" }
chrono = { version = "0.4.6", features = [ "serde" ] }
dotenv = "0.13.0"
failure = "0.1.4"
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
env_logger = "0.6.0"
log = "0.4.6"
toml = "0.4.10"
tiny_http = "0.6.1"
structopt = "0.2.14"
diesel = { version = "1.3.3", default-features = false, features = ["postgres", "r2d2", "chrono", "uuid"] }
actix-web = "0.7.18"
actix-net = "0.2.6"
r2d2 = "0.8.3"
futures = "0.1.25"
sha2 = "0.8.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
actix-web-async-await = "0.2.0"
envy = "0.3.3"
tokio-async-await = "0.1.5"
